tests/lean/precissues.lean.expected.out
id fun (x : ?m) => x : ?m → ?m
0 : Nat
f 1 fun (x : Nat) => x : Nat
0 : Nat
f 1 fun (x : Nat) => x : Nat
id : ?m → ?m
precissues.lean:15:10: error: expected command
precissues.lean:17:10: error: expected command
id ((fun (this : True) => this) True.intro) : True
0 = (fun (this : Nat) => this) 1 : Prop
0 =
  let x : Nat := 0;
  x : Prop
p ↔ ¬q : Prop
True = ¬False : Prop
p ∧ ¬q : Prop
¬p ∧ q : Prop
¬p ↔ q : Prop
¬p = q : Prop
¬p = q : Prop
id ¬p : Prop
∀ (a a : Nat), a = a : Prop
id : ?m → ?m
precissues.lean:41:10: error: expected command
